service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-demo-service
spec:
  type: NodePort
  selector:
    app: k8s-demo
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30001
